--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,5 +1,4 @@
 .banner {
-    background: rgb(231, 231, 231);
     background: linear-gradient(173deg, rgba(231, 231, 231, 1) 0%, rgba(64, 174, 207, 1) 100%);
     height: 100vmin;
     display: flex;
@@ -15,7 +14,7 @@
     font: 600 2.5vmax "Roboto";
 }
 .banner p{
-    font: 300 1.4vmax "Lucida Sans";
+    font: 300 1.8vmax "Lucida Sans";
 }
 .banner a button{
     margin-bottom: 5vmax;
@@ -27,4 +26,46 @@
     transition: all 0.5s;
     width: 9vmax;
     font: 500 1vmax "Roboto";
+}
+.banner a button:hover{
+    background-color: #86c7d9;
+}
+.banner::after{
+    content: "";
+    width: 100vw;
+    height: 100vmin;
+    background-color: #ffffff;
+    position: absolute;
+    top: 0%;
+    left: 0;
+    max-width: 100%;
+    clip-path: polygon(100% 68%, 0% 100%, 100% 100%);
+}
+
+.homeHeading{
+    font-family: Roboto;
+    border-bottom: 1px solid rgba(21, 21, 21, 0.5);
+    text-align: center;
+    width: 20vmax;
+    margin: 5vmax auto;
+    padding: 1vmax;
+    font-size: 1.4vmax;
+    color: rgba(0, 0, 0, 0.7);
+}
+.container{
+    display: flex;
+    justify-content: center;
+    margin: 2vmax auto;
+    width: 80vw;
+    flex-wrap: wrap;
+}
+.container__error{
+    color: rgb(133,100,22);
+    font-size: 1.8vmax;
+    background-color: #fff3cd;
+    padding: 1vmax;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    border-radius: 1px;
 }
