--- a/frontend/src/components/Search/Search.css
+++ b/frontend/src/components/Search/Search.css
@@ -1,36 +1,42 @@
-.search {
-    width: 100vw;
-    max-width: 100%;
-    height: 90vh;
-    /* background: grey; */
+input:focus {
+    outline: none;
 }
 
-.search input {
-    position: relative;
-    left: 25%;
-    right: 25%;
-    top: 45%;
+.searchBox {
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.searchBox div {
+    display: flex;
     width: 60%;
     height: 3vmax;
-    border: 1px solid white;
-    padding-left: 1.2vmax;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.searchBox div input[type="text"],
+.searchBox div input[type="submit"] {
+    height: 100%;
     font-size: 1vmax;
 }
 
-.search button {
-    position: relative;
-    left: 19%;
-    top: 45%;
-    height: 2.5vmax;
-    width: 5%;
-    background: crimson;
-    color: white;
-    font-size: 1.1vmax;
-    border: none;
-    box-shadow: rgba(255, 0, 0, 0.866) 0px 5px 15px;
+.searchBox div input[type="text"] {
+    width: 80%;
+    height: 89%;
 }
-.search button:hover {
+
+.searchBox div input[type="submit"] {
+    width: 20%;
+    background: crimson;
+    border: 1px solid crimson;
+    color: white;
+    box-shadow: rgb(255 255 255 / 87%) 2px -3px 7px 0px;
+}
+
+.searchBox div input[type="submit"]:hover {
     cursor: pointer;
-    box-shadow: inset rgb(255 255 255 / 87%) 2px -3px 7px 0px;
+    box-shadow: rgba(255, 0, 0, 0.866) 0px 5px 15px;
 }
