--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -1,5 +1,6 @@
 .banner {
-    background: linear-gradient(173deg, rgba(231, 231, 231, 1) 0%, rgba(64, 174, 207, 1) 100%);
+    position: relative;
+    background: linear-gradient(287deg, rgba(2,0,36,1) 0%, rgba(0,212,255,1) 100%);
     height: 100vmin;
     display: flex;
     flex-direction: column;
@@ -30,7 +31,18 @@
 .banner a button:hover{
     background-color: #86c7d9;
 }
-.banner::after{
+.banner::before{
+    content: "";
+    width: 100vw;
+    height: 100vmin;
+    background-color: #ffffff;
+    position: absolute;
+    top: 0%;
+    left: 0;
+    max-width: 100%;
+    clip-path: polygon(0 0, 0 30%, 100% 0);
+}.banner::after{
+    border-bottom: #ffffff;
     content: "";
     width: 100vw;
     height: 100vmin;
