--- a/frontend/src/components/layout/Filter/FilterBasic.css
+++ b/frontend/src/components/layout/Filter/FilterBasic.css
@@ -1,112 +1,40 @@
 /* FILTER BASIC */
 .filter_basic {
-    position: absolute;
-    bottom: 0%;
-    left: 0%;
-    z-index: 10;
-    display: flex;
-    flex-direction: column;
+    margin: 0;
+    height: 80vh;
+    border: 1px solid gold;
+    border-radius: 0.5vmax;
+    overflow-y: scroll;
 }
 
-.filter_basic_main {
-    display: flex;
-    justify-content: space-between;
-    background: #ffffff;
-    position: fixed;
-    bottom: -100vmax;
-    left: 0;
-    width: 100vw;
-    max-width: 100%;
-    height: 82vh;
-    transition: all 1.2s ease-in;
-}
+/* .filter_basic_main {
 
-.filter_basic_display {
-    border: 2px solid rgb(53 26 72);
-    border-right: none;
-    width: 70%;
+} */
+.filter_basic_main_category > ul {
+    list-style-type: none;
+    padding: 0;
 }
-.filter_basic_display_header{
-    background: rgb(53 26 72);
-    color: #ffffff;
-    padding: 2vmax;
-}
-.filter_basic_display div{
-    padding-top: 2vmax;
-    padding-left: 4vmax;
-}
-.filter_basic_display_options > label{
+.filter_basic_main_category > ul > li{
+    padding: 0.4vmax;
     padding-left: 1vmax;
 }
-
-
-.filter_basic_display_minmax{
+.filter_basic_main_category > ul > li:first-child{
+    padding-left: 0.4vmax;
+}
+.filter_basic_main_category > form{
     display: flex;
+    flex-direction: column;
+    gap: 0.2vmax;
+    margin: 1vmax;
 }
-.filter_basic_display_minmax > input{
-    width: 40%;
-    margin: 0 1vmax;
-}
-
-
-.filter_basic_options {
-    background: #d1d1d1;
-    border: 2px solid rgb(53 26 72);
-    border-left: none;
-    width: 30%;
-}
-.filter_basic_options > h4{
-    background: rgb(53 26 72);
-    color: #ffffff;
-    padding: 2vmax;
-}
-.filter_basic_options > button{
-    text-align: left;
-    width: 70%;
-    font-size: 2.1vmax;
-    margin: 0.3vmax 0;
-    padding: 1vmax;
-    border: none;
-    background: #ffffff;
-}
-
-.price-apply-button {
-    width: fit-content;
-    height: 4vmax;
-    min-height: fit-content;
-    border: none;
-    background: rgb(249, 130, 46);
-    color: white;
-}
-
-.filter_basic_collapsed {
-    display: flex;
-    justify-content: space-between;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    max-width: 100%;
-}
-
-.filter_basic_collapsed button {
+.filter_basic_main_category > form > input[type="number"]{
     width: 50%;
-    height: 6vmax;
-    background: rgb(53 26 72);
+}
+
+.filter_basic_main_category > form > input[type="submit"]{
+    width: fit-content;
+    background: rgb(246,130,46);
     color: white;
     border: none;
-    font-size: 2.1vmax;
-}
-
-.inactive {
-    display: none;
-}
-
-.active {
-    bottom: 6vmax;
-}
-
-.filter_basic_price input[type="number"] {
-    width: 20%;
-    height: 3.1vmax;
+    border-radius: 0.5vmax;
 }
